<resources>
    <string name="app_name">ShivShaktiHonda service</string>
    <string name="splash_app_name">Shiv Shakti Honda</string>

    <!--Login Screen-->
    <string name="login_username_hint">Enter User Name</string>
    <string name="login_password_hint">Enter Password</string>
    <string name="login_btn">Sign In</string>
    <string name="title_activity_view_dashboard">ViewDashboard</string>
    <!--Change Password-->
    <string name="change_password_title">Change Password</string>
    <string name="oldpassword_hint">Enter Old Password</string>
    <string name="newpassword_hint">Enter New Password</string>
    <string name="confirm_password_hint">Enter Confirm Password</string>
    <string name="title_activity_admin">AdminActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!--add person -->
    <string name="salespersondetail_screen_title">SalesPerson Details</string>
    <string name="salesperson_add_screen_title">Add SalesPerson</string>
    <string name="salespersondetail_screen_name">Name</string>
    <string name="salespersondetail_screen_email">Email</string>
    <string name="salespersondetail_screen_username">User Name</string>
    <string name="salespersondetail_screen_mobilenumber">Mobile Number</string>
    <string name="salespersondetail_screen_password">Password</string>

    <string name="action_settings">Settings</string>
    <string name="common_add">Add</string>
    <string name="title_activity_user">UserActivity</string>
</resources>
